--- a/usefulness_annotation/templates/baidu.html
+++ b/usefulness_annotation/templates/baidu.html
@@ -2527,7 +2527,7 @@
 <body>
 {% if is_annotation %}
     <div class="con-wrap">
-        <textarea maxlength="64" id="kw" name="word" class="se-input adjust-input" data-sug="1">{{ query }}</textarea>
+        <textarea maxlength="64" id="kw" name="word" class="se-input adjust-input" data-sug="1"></textarea>
         <div class="se-inner">
             <button id="se-bn" class="se-bn" onclick="finishandredirect()"><span>提交标注</span></button>
     </div>
