--- a/usefulness_annotation/templates/tasks_finished.html
+++ b/usefulness_annotation/templates/tasks_finished.html
@@ -9,7 +9,7 @@
     <title>Tasks Finished</title>
 </head>
 <body>
-<h2 style="color:blue"> {{ user_id }} , 你已完成编号 {{ setting_id }} 的所有任务!
+<h2 style="color:blue"> {{ user_id }} , 你已完成任务 {{ setting_id }} 的所有标注!
 </h2>
 <h2 style="color:blue">感谢你的参与!
 </h2>
