--- a/usefulness_annotation/templates/tasks.html
+++ b/usefulness_annotation/templates/tasks.html
@@ -29,7 +29,7 @@
                 <h3 style="color: red">任务描述： {{ description }}</h3>
                 <p></p>
 
-                <div><a href='/annotation/{{ assessor_id }}/{{ task_id }}/'
+                <div><a href='/selectsession/{{ assessor_id }}/{{ task_id }}/'
                         >点击这里开始进行标注</a></div>
 
             </div>
