--- a/usefulness_annotation/templates/baidu_annotation.html
+++ b/usefulness_annotation/templates/baidu_annotation.html
@@ -2608,7 +2608,7 @@
                 });
 
                 window.onbeforeunload = null;
-                window.location.href = 'http://' + host + ':' + port + '/annotation/{{ assessor_id }}/{{ task_id }}/';
+                window.location.href = 'http://' + host + ':' + port + '/selectsession/{{ assessor_id }}/{{ task_id }}/';
             }
         }
     }
@@ -2667,7 +2667,7 @@
             $("div.results").append(result);
             //alert(result_id);
             if ({{ unit.dwell_time }})
-                $(result).after('<p style="color: blue">上面结果是原始列表的第'+rank+'个结果</p><p style="color: blue">用户浏览该结果的摘要的时间: {{ unit.exposed_time }}s</p><p style="color: blue">用户点击之后查看该结果的时间: {{ unit.dwell_time }}s</p><a href="{{ unit.url }}">用户点击的链接在这里</a><form><div align="center" style="color: red">根据以上信息,你认为这个结果对于用户完成任务有用么: <select id="usefulness_'+j+'" style="min-height: 40px; color: red; width: 100%"><option value="0"></option><option value="1">1: 完全没用</option><option value="2">2: 有一点用</option><option value="3">3: 比较有用</option><option value="4">4: 非常有用</option></select></div></form>');
+                $(result).after('<p style="color: blue">上面结果是原始列表的第'+rank+'个结果</p><p style="color: blue">用户浏览该结果的摘要的时间: {{ unit.exposed_time }}s</p><p style="color: blue">用户点击之后查看该结果的时间: {{ unit.dwell_time }}s</p><a href="{{ unit.url }}" class="click-url">用户点击的链接在这里</a><form><div align="center" style="color: red">根据以上信息,你认为这个结果对于用户完成任务有用么: <select id="usefulness_'+j+'" style="min-height: 40px; color: red; width: 100%"><option value="0"></option><option value="1">1: 完全没用</option><option value="2">2: 有一点用</option><option value="3">3: 比较有用</option><option value="4">4: 非常有用</option></select></div></form>');
             else
                 $(result).after('<p style="color: blue">上面结果是原始列表的第'+rank+'个结果</p><p style="color: blue">用户浏览该结果的摘要的时间: {{ unit.exposed_time }}s</p><p style="color: blue">用户没有点击该结果</p><form><div align="center" style="color: red">根据以上信息,你认为这个结果对于用户完成任务有用么: <select id="usefulness_'+j+'" style="min-height: 40px; color: red; width: 100%"><option value="0"></option><option value="1">1: 完全没用</option><option value="2">2: 有一点用</option><option value="3">3: 比较有用</option><option value="4">4: 非常有用</option></select></div></form>');
             j++;
@@ -2684,17 +2684,16 @@
             document.cookie = cname + "=" + cvalue;
         }
 
-
         $("a").click(function(){
-            alert('hh');
-            /*var results = $("div.results>div[class$='esult'][style!='display:none;'],div.results>div[id^='sogou_vr'][style!='display:none;']");
-            for(var i=0; i<results.length; i++){
-                alert(i);
-                //var cvalue = $("#usefulness_"+i).val();
-                //setCookie({{ assessor_id }} + String({{ session_id }}) + String(i) + 'usefulness', cvalue);
-            }*/
+            var j = 0;
+            {% for unit in units %}
+            j++;
+            {% endfor %}
+            for(var i=0; i<j; i++){
+                var cvalue = $("#usefulness_"+i).val();
+                setCookie({{ assessor_id }} + String({{ session_id }}) + String(i) + 'usefulness', cvalue);
+            }
         });
-
     });
     </script>
 {% endif %}
